# game-store

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
config/: datanode.example.toml
crates/gamestore-common/: Cargo.toml
crates/gamestore-common/src/: config.rs  error.rs  lib.rs  metrics.rs  telemetry.rs
crates/gamestore-datamodel/: Cargo.toml
crates/gamestore-datamodel/benches/: commands.rs
crates/gamestore-datamodel/src/: lib.rs  registry.rs
crates/gamestore-datamodel/src/commands/: admin.rs  connectivity.rs  hash.rs  list.rs  mod.rs  set.rs  string.rs  zset.rs
crates/gamestore-datamodel/tests/: functional_parity.rs  hash_commands.rs  list_commands.rs  registry.rs  set_commands.rs  string_commands.rs  zset_commands.rs
crates/gamestore-datamodel/tests/common/: mod.rs
crates/gamestore-datanode/: Cargo.toml
crates/gamestore-datanode/src/: core.rs  lib.rs  main.rs  observability.rs  resp.rs  server.rs
crates/gamestore-datanode/tests/: e2e_data.rs  metrics_endpoint.rs  ping_smoke.rs
crates/gamestore-engine/: Cargo.toml
crates/gamestore-engine/benches/: encoding.rs  store_ops.rs
crates/gamestore-engine/src/: encoding.rs  engine.rs  error.rs  gc.rs  lib.rs  rocks.rs  store.rs
crates/gamestore-engine/tests/: encoding_props.rs  store_rocksdb.rs
crates/gamestore-protocol/: Cargo.toml
crates/gamestore-protocol/src/: codec.rs  decode.rs  encode.rs  error.rs  frame.rs  lib.rs
crates/gamestore-protocol/tests/: framed.rs  roundtrip.rs
crates/gamestore-wal/: Cargo.toml
crates/gamestore-wal/benches/: wal_group_commit.rs
crates/gamestore-wal/src/: engine.rs  error.rs  file.rs  lib.rs  null.rs  record.rs  wal.rs
crates/gamestore-wal/tests/: file_wal.rs  wal_engine.rs
docs/: EVOLUTION.md
docs/benchmarks/: 2026-07-02-i07-baseline.md  2026-07-02-i08-wal-writepath.md
docs/design/: 00-overview.md  01-workload-data-model.md  02-architecture.md  03-storage-engine.md  04-replication-consistency.md  05-sharding-routing.md  06-deployment-cloud.md  07-backup-recovery.md  08-observability-ops.md  09-roadmap.md  10-implementation-plan-rust.md
spike/: .gitignore  README.md
spike/cpp/: CMakeLists.txt
spike/cpp/src/: commands.cpp  commands.h  encoding.h  gc.h  main.cpp  resp.cpp  resp.h  storage.cpp  storage.h
spike/rust/: Cargo.toml
spike/rust/.cargo/: config.toml
spike/rust/src/: commands.rs  encoding.rs  gc.rs  main.rs  resp.rs  storage.rs
spike/test/: redis_functional_test.py  run_all.sh
tests/: bench_throughput.py  redis_composite_test.py
