[workspace]
resolver = "2"
members = [
    "crates/gamestore-common",
    "crates/gamestore-protocol",
    "crates/gamestore-engine",
    "crates/gamestore-datamodel",
    "crates/gamestore-wal",
    "crates/gamestore-datanode",
]

# Crates that are part of the plan (§2.1) but not yet introduced.
# They are intentionally left out of `members` until their own MR lands so
# the workspace stays buildable and CI stays meaningful.
#   gamestore-replication / gamestore-meta / gamestore-proxy / gamestore-cli

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
license = "Apache-2.0"
repository = "https://github.com/dashjay/gamestore"
authors = ["GameStore contributors"]

# Common dependencies shared across crates. Concrete crates opt in via
# `foo = { workspace = true }` so versions stay aligned in one place.
[workspace.dependencies]
# Async runtime (started on tokio per plan §1; thread-per-core deferred to Phase-2+).
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal", "time", "sync"] }
# Error handling: libraries use thiserror, binaries use anyhow (plan §1).
thiserror = "1"
anyhow = "1"
# Configuration: serde + TOML (plan §1).
serde = { version = "1", features = ["derive"] }
toml = "0.8"
# Observability: structured logging + metrics facade (plan §1).
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.23"
metrics-exporter-prometheus = { version = "0.15", default-features = false }
# Byte buffers used across the protocol / engine boundaries.
bytes = "1"
# CRC32 (IEEE) for per-record WAL integrity checks (I-08). Stable, edition-2018
# crate whose only dependency is cfg-if, so it is safe under the pinned Rust
# 1.83 toolchain (no edition2024 transitive risk — see the pins below).
crc32fast = "1"
# RocksDB binding (published as `rocksdb`, bundles RocksDB). Same binding family
# TiKV uses; supports the Compaction Filter we rely on for version-based subkey
# GC (plan §1). Introduced by the engine layer in I-03.
rocksdb = "0.22"
# tokio codec framing (Decoder/Encoder) for the protocol adapter layer (I-02).
tokio-util = { version = "0.7", features = ["codec"] }
# Property-based testing (round-trip / fuzz-style coverage), dev-only (plan §1).
# Pinned to 1.5.x: newer proptest pulls rand 0.9 → getrandom 0.4, which requires
# the not-yet-stable `edition2024` and fails on our pinned Rust 1.83 toolchain.
proptest = "=1.5.0"
# Stream/Sink extension traits, used in dev tests for the tokio Framed adapter.
futures = "0.3"
# Temporary directories for engine tests (fresh RocksDB per test), dev-only.
# Pinned to 3.14.0: newer tempfile pulls getrandom 0.4.x, which requires the
# not-yet-stable `edition2024` and fails on our pinned Rust 1.83 toolchain
# (same constraint recorded for proptest in MR-0015).
tempfile = "=3.14.0"
# Micro-benchmarks (I-07), dev-only. Default features disabled: we don't need
# HTML/plotters reports, and fewer transitive deps means less exposure to the
# edition2024 incompatibilities on the pinned Rust 1.83 toolchain. Even so,
# criterion's transitive `clap` had to be pinned in Cargo.lock
# (`cargo update -p clap --precise 4.5.23`): clap >= 4.6 pulls clap_lex 1.x,
# which requires the not-yet-stable `edition2024` (same class of pin as
# proptest/tempfile above, recorded in MR-0020).
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
# Internal workspace crates.
gamestore-common = { path = "crates/gamestore-common", version = "0.1.0" }
gamestore-protocol = { path = "crates/gamestore-protocol", version = "0.1.0" }
gamestore-engine = { path = "crates/gamestore-engine", version = "0.1.0" }
gamestore-datamodel = { path = "crates/gamestore-datamodel", version = "0.1.0" }
gamestore-wal = { path = "crates/gamestore-wal", version = "0.1.0" }

[profile.release]
opt-level = 3
