[package]
name = "gamestore-datamodel"
description = "GameStore data model layer: Redis type commands (String/Hash/Set/ZSet/List) over the engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gamestore-engine = { workspace = true }
gamestore-protocol = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
# Fresh RocksDB-backed stores for the integration tests (GC / compaction
# assertions need the real engine); unit tests run on the in-crate MemEngine.
tempfile = { workspace = true }
