[package]
name = "gamestore-datanode"
description = "GameStore DataNode: single-node RESP2/RESP3 server over the command registry and RocksDB store (I-05)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

# Split into a library (server logic, integration-testable) + a thin binary.
[lib]
name = "gamestore_datanode"
path = "src/lib.rs"

[[bin]]
name = "gamestore-datanode"
path = "src/main.rs"

[dependencies]
gamestore-common = { workspace = true }
gamestore-protocol = { workspace = true }
gamestore-engine = { workspace = true }
gamestore-datamodel = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
tempfile = { workspace = true }
