[package]
name = "gamestore-engine"
description = "GameStore general engine layer: GeneralEngine trait + RocksDB impl + encoding + compaction GC"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gamestore-common = { workspace = true }
rocksdb = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
