[package]
name = "gamestore-protocol"
description = "GameStore RESP2/RESP3 wire protocol (sans-IO core + tokio adapters)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
gamestore-common = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
